fixed home emoji stretching on safari

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,7 +16,7 @@
   }
 
   main {
-    padding-top: 8rem;
+    padding-top: 5rem;
   }
 
   h1 {
