--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -5,13 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
-  .emoji {
-    max-height: 400px;
-  }
 
   .wrapper-bottom {
-    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -37,14 +32,17 @@
   }
 
   .wrapper-top {
-    max-width: 600px;
+    max-width: 200px;
     height: fit-content;
-    border-radius: 5rem 5rem 0 0;
+    border-radius: 50%;
     background-color: $redColor;
+    overflow: hidden;
   }
 
   .emoji {
     width: 100%;
+    object-fit: cover;
+    object-position: center;
     transform: translateY(20px);
   }
 
